fixed the image for better visibility

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <a href="/games/monkey-mart.html" style="text-decoration: none;"><img src="images/games/monkey-mart.png" height="160" width="160" vspace="10" hspace="10">
 <a href="/games/burrito-bison.html" style="text-decoration: none;"><img src="images/games/burrito-bison.png" height="160" width="160" vspace="10" hspace="10">
 <a href="/games/doge-miner.html" style="text-decoration: none;"><img src="images/games/doge-miner.png" height="160" width="160" vspace="10" hspace="10">
-<a href="/games/draw-the-hill.html" style="text-decoration: none;"><img src="images/games/draw-the-hill.png" height="160" width="160" vspace="10" hspace="10">
+<a href="/games/eggy-car.html" style="text-decoration: none;"><img src="images/games/eggy-car.png" height="160" width="160" vspace="10" hspace="10">
 <a href="/games/drift-boss.html" style="text-decoration: none;"><img src="images/games/drift-boss.png" height="160" width="160" vspace="10" hspace="10">
 <a href="/games/drive-mad.html" style="text-decoration: none;"><img src="images/games/drive-mad.png" height="160" width="160" vspace="10" hspace="10">
 <a href="/games/rooftop-snipers.html" style="text-decoration: none;"><img src="images/games/rooftop-snipers.png" height="160" width="160" vspace="10" hspace="10">
