--- a/dump/text.html
+++ b/dump/text.html
@@ -64,6 +64,7 @@ textarea:focus, input:focus {
         <li><b><a href="/games/harry-potter-chamber-of-secrets.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Harry Potter: 2 (GBA)</a><br></li>
         <li><b><a href="/games/idle-breakout.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Idle Breakout</a><br></li>
         <li><b><a href="/games/idle-mining-empire.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Idle Mining Empire</a><br></li>
+        <li><b><a href="/games/jetpack-joyride.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Jetpack Joyrider</a><br></li>
         <li><b><a href="/games/kirka-io.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Kirka.io</a><br></li>
         <li><b><a href="/games/krunker-io.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Krunker.io</a><br></li>
         <li><b><a href="/games/make-it-meme.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Make It Meme</a><br></li>
