--- a/games/eggy-car.html
+++ b/games/eggy-car.html
@@ -38,6 +38,6 @@
 <embed src="/dump/text.html">
 </div>
 
-<p align="center"><iframe src="https://m0u0qgft37bki6i943tnlh4lgcr39mq5-a-sites-opensocial.googleusercontent.com/gadgets/ifr?url=https://493104753-963057148227461038.preview.editmysite.com/uploads/b/139890129-825858355833705451/files/ec.xml&container=enterprise&view=default&lang=en&country=ALL&sanitize=0&v=e1f51298642f7d3c&libs=core&mid=198&parent=https://sites.google.com/site/unblockedgame76/eggy-car#st=e%3DAIHE3cBi5TjHfDVOfZBHMtiYaAp128syEYU6op7bU0DdtXHrVKasE%252BpGnPcCUbrk0hpfgbZ9pGHqLbczwCznl%252F6dYsg2kz9SQwva0iSiqHEDoczXJ3Xvxv%252BqyeZGyhfvq2cNkLgE45LM%26c%3Denterprise&rpctoken=8768618252104818870" id="iframe"></iframe></p>
+<p align="center"><iframe src="https://webglmath.github.io/eggy-car/" id="iframe"></iframe></p>
 
 <script src="/js/test.js"></script>
