--- a/games/eagler-craft.html
+++ b/games/eagler-craft.html
@@ -39,6 +39,6 @@ unblocked games!</p>
 <embed src="/dump/text.html">
 </div>
 
-<p align="center"><iframe src="https://eaglercraft-server.mlb5325.repl.co/" id="iframe"></iframe></p>
+<p align="center"><iframe src="https://spew45.github.io/game-assets/precision-client/" id="iframe"></iframe></p>
 
 <script src="/js/test.js"></script>
