--- a/games/google-baseball.html
+++ b/games/google-baseball.html
@@ -39,6 +39,6 @@ unblocked games!</p>
 <embed src="/dump/text.html">
 </div>
 
-<p align="center"><iframe src="https://www.google.com/logos/2019/july4th19/r6/july4th19.html?hl=en&sdoodles=1" id="iframe"></iframe></p>
+<p align="center"><iframe src="https://googlebaseball.github.io/file/" id="iframe"></iframe></p>
 
 <script src="/js/test.js"></script>
