--- a/games/moto-x3m.html
+++ b/games/moto-x3m.html
@@ -39,6 +39,6 @@ unblocked games!</p>
 <embed src="/dump/text.html">
 </div>
 
-<p align="center"><iframe src="https://www-sites-opensocial.googleusercontent.com/gadgets/ifr?url=https://sites.google.com/site/s017q3e/moto-x3m.xml" id="iframe"></iframe></p>
+<p align="center"><iframe src="https://spew45.github.io/game-assets/motox3m/" id="iframe"></iframe></p>
 
 <script src="/js/test.js"></script>
