--- a/games/time-shooter-3.html
+++ b/games/time-shooter-3.html
@@ -39,6 +39,6 @@ unblocked games!</p>
 <embed src="/dump/text.html">
 </div>
 
-<p align="center"><iframe src="https://c948ebn9d7mt7708ltutkt0ncbqleedo-a-sites-opensocial.googleusercontent.com/gadgets/ifr?url=https://sites.google.com/site/x002d4f5/ts3.xml&container=enterprise&view=default&lang=en&country=ALL&sanitize=0&v=d46b9372ddb3ad67&libs=core&mid=88&parent=https://sites.google.com/site/unblockedgame76/time-shooter-3#st=e%3DAIHE3cCr69HCrDY8dYwJRmtp3EMwBpMqS6gUAnZAc2B%252B6H3tnlZXMTQhr7Lr5H2xKXRSSNNN43X2HZSj3d6VY%252FPeL2lKdTp7VuDQwVO%252BTfXqh1YouEq%252FMpC4BxUr0gPD7HogVSpuy9Kw%26c%3" id="iframe"></iframe></p>
+<p align="center"><iframe src="https://spew45.github.io/game-assets/time-shooter-3/" id="iframe"></iframe></p>
 
 <script src="/js/test.js"></script>
