--- a/dump/text.html
+++ b/dump/text.html
@@ -34,28 +34,23 @@ textarea:focus, input:focus {
 <input type="text" id="mySearch" onkeyup="myFunction()" placeholder="Search games" title="Type in a category">
     <ul id="myMenu">
         <li><b><a href="/games/1v1-lol.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">1v1.lol</a><br></li>
-        <li><b><a href="/games/3kh0.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">3kh0 Unblocked</a><br></li>
-        <li><b><a href="/games/123-movies.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">123-Movies (Movies)</a><br></li>
         <li><b><a href="/games/basket-random.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Basket Random</a><br></li>
         <li><b><a href="/games/btd4.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Balloons TD 4</a><br></li>
         <li><b><a href="/games/burrito-bison.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Burrito Bison</a><br></li>
         <li><b><a href="/games/cat-trap.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Cat Trap</a><br></li>
-        <li><b><a href="/games/chess.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Chess.com</a><br></li>
         <li><b><a href="/games/color-tunnel.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Color Tunnel</a><br></li>
         <li><b><a href="/games/contra-3.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Contra 3</a><br></li>
         <li><b><a href="/games/cookie-clicker.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Cookie Clicker</a><br></li>
         <li><b><a href="/games/craft-mine.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Craft Mine</a><br></li>
         <li><b><a href="/games/crazy-tycoon.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Crazy Tycoon</a><br></li>
-        <li><b><a href="/games/curveball.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Curveball (Broken)</a><br></li>
+        <li><b><a href="/games/curveball.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Curveball</a><br></li>
         <li><b><a href="/games/doge-miner.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Doge Miner</a><br></li>
         <li><b><a href="/games/donkey-kong.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Donkey Kong</a><br></li>
         <li><b><a href="/games/draw-the-hill.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Draw The Hill</a><br></li>
         <li><b><a href="/games/drift-boss.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Drift Boss</a><br></li>
         <li><b><a href="/games/drive-mad.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Drive Mad</a><br></li>
-        <li><b><a href="/games/eagler-craft.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Minecraft</a><br></li>
         <li><b><a href="/games/eggy-car.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Eggy Car</a><br></li>
         <li><b><a href="/games/fire-boy-and-water-girl.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Fire Boy and Water Girl</a><br></li> 
-        <li><b><a href="/games/fortnite.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Geforce Now</a><br></li>
         <li><b><a href="/games/geometry-dash.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Geometry Dash</a><br></li>
         <li><b><a href="/games/getaway-shootout.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Getaway Shootout</a><br></li>
         <li><b><a href="/games/google-baseball.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Google Baseball</a><br></li>
@@ -66,6 +61,7 @@ textarea:focus, input:focus {
         <li><b><a href="/games/idle-breakout.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Idle Breakout</a><br></li>
         <li><b><a href="/games/idle-mining-empire.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Idle Mining Empire</a><br></li>
         <li><b><a href="/games/jetpack-joyride.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Jetpack Joyride</a><br></li>
+          <li><b><a href="/games/eagler-craft.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Minecraft</a><br></li>
         <li><b><a href="/games/kirka-io.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Kirka.io</a><br></li>
         <li><b><a href="/games/krunker-io.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Krunker.io</a><br></li>
         <li><b><a href="/games/make-it-meme.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Make It Meme</a><br></li>
@@ -92,7 +88,6 @@ textarea:focus, input:focus {
         <li><b><a href="/games/soccer-random.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Soccer Random</a><br></li>
         <li><b><a href="/games/soccer-skills.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Soccer Skills</a><br></li>
         <li><b><a href="/games/sort-the-court.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Sort The Court</a><br></li>
-        <li><b><a href="/games/spotify.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Spotify (Music, App)</a><br></li>
         <li><b><a href="/games/stick-merge.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Stick Merge</a><br></li>
         <li><b><a href="/games/stickman-hook.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Stickman Hook</a><br></li>
         <li><b><a href="/games/subway-surfers.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Subway Surfers</a><br></li>
@@ -100,10 +95,7 @@ textarea:focus, input:focus {
         <li><b><a href="/games/tanuki-sunset.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Tanuki Sunset</a><br></li>
         <li><b><a href="/games/thps2.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Tony Hawk Pro Skater: 2</a><br></li>
         <li><b><a href="/games/time-shooter-3.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Time Shooter: 3</a><br></li>
-        <li><b><a href="/games/tubi.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Tubi (Movies)</a><br></li>
         <li><b><a href="/games/uno.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Uno Online</a><br></li>
-        <li><b><a href="/games/uv.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Ultraviolet</a><br></li>
-        <li><b><a href="/games/vumoo.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Vumoo (Movies)</a><br></li>
         <li><b><a href="/games/wheelie-cross.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Wheelie Cross</a><br></li>
     </ul>
 </div>
