--- a/games/jetpack-joyride.html
+++ b/games/jetpack-joyride.html
@@ -39,6 +39,6 @@ unblocked games!</p>
 <embed src="/dump/text.html">
 </div>
 
-<p align="center"><iframe src="https://html5.gamedistribution.com/17d66951b54e4979b0f24d14cc7423b6/?gd_sdk_referrer_url=https://www.mathnook.com/fun-games-2/soccer-skills-2021.html" id="iframe"></iframe></p>
+<p align="center"><iframe src="https://spew45.github.io/game-assets/jetpack/" id="iframe"></iframe></p>
 
 <script src="/js/test.js"></script>
