--- a/games/krunker-io.html
+++ b/games/krunker-io.html
@@ -39,6 +39,6 @@ unblocked games!</p>
 <embed src="/dump/text.html">
 </div>
 
-<p align="center"><iframe src="https://g312o742o975d845l75u45c324k904g28e391t53t035i174n3g25i23t894.mlb5325.repl.co/service/hvtrs8%2F-kpulkgr%2Cim%2F" id="iframe"></iframe></p>
+<p align="center"><iframe src="https://krunker.io/ id="iframe"></iframe></p>
 
 <script src="/js/test.js"></script>
