--- a/games/monkey-mart.html
+++ b/games/monkey-mart.html
@@ -39,6 +39,6 @@ unblocked games!</p>
 <embed src="/dump/text.html">
 </div>
 
-<p align="center"><iframe src="https://html5.gamemonetize.co/ugi7ftbv2kgodcq7vful9u9v34wein5z/" id="iframe"></iframe></p>
+<p align="center"><iframe src="https://monkey-mart.io/iframe/index.html" id="iframe"></iframe></p>
 
 <script src="/js/test.js"></script>
