--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
   <p style="font-family: Arial;">The best website for all your unblocked games with over 50+ popular unblocked games!</p>
 </div>
 
+<div class="newsHeader">
+  <a href="https://spew45.github.io" style="text-decoration: none;"><h1 style="color: #fff; font-family: 'Poppins', sans-serif;">Spew45</h1></a>
+  <p style="font-family: Arial;">The best website for all your unblocked games with over 50+ popular unblocked games!</p>
+</div>
+
 <div class="border"></div>
 
 <div class="dropdown" style="float:right;">
