--- a/games/krunker-io.html
+++ b/games/krunker-io.html
@@ -39,6 +39,6 @@ unblocked games!</p>
 <embed src="/dump/text.html">
 </div>
 
-<p align="center"><iframe src="https://krunker.io/ id="iframe"></iframe></p>
+<p align="center"><iframe src="https://spew45.github.io/game-assets/drive-mad/krunker" id="iframe"></iframe></p>
 
 <script src="/js/test.js"></script>
