--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 </div>
 
 <div class="newsHeader">
-  <a href="https://spew45.github.io" style="text-decoration: none;"><h1 style="color: #fff; font-family: 'Poppins', sans-serif;">Spew45</h1></a>
-  <p style="font-family: Arial;">The best website for all your unblocked games with over 50+ popular unblocked games!</p>
+  <a href="https://spew45.github.io" style="text-decoration: none;"><h1 style="color: #fff; font-family: 'Poppins', sans-serif;">Update 0.1.2</h1></a>
+  <p style="font-family: Arial;">- fixes to all previously broken games<br>- added fullscreen game option, click on the gear icon in the top right when playing a game</p>
 </div>
 
 <div class="text">
