--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <title>Homepage</title>
 
 <div class="header">
-  <a href="https://spew45.github.io" style="text-decoration: none;"><h1 style="color: #fff; font-family: 'Poppins', sans-serif;">Spew45</h1></a>
+  <a href="https://spew45.github.io" style="text-decoration: none;"><h1 style="color: #fff; font-family: 'Poppins', sans-serif;">Ian</h1></a>
   <p style="font-family: Arial;">The best website for all your unblocked games with over 50+ popular unblocked games!</p>
 </div>
 
