--- a/dump/text.html
+++ b/dump/text.html
@@ -34,9 +34,11 @@ textarea:focus, input:focus {
 <input type="text" id="mySearch" onkeyup="myFunction()" placeholder="Search games" title="Type in a category">
     <ul id="myMenu">
         <li><b><a href="/games/1v1-lol.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">1v1.lol</a><br></li>
+        <li><b><a href="/games/backflip-3d.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Backflip 3d</a><br></li>
         <li><b><a href="/games/basket-random.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Basket Random</a><br></li>
         <li><b><a href="/games/btd4.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Balloons TD 4</a><br></li>
         <li><b><a href="/games/burrito-bison.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Burrito Bison</a><br></li>
+        <li><b><a href="/games/car-simulator.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Car Simulator</a><br></li>
         <li><b><a href="/games/cat-trap.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Cat Trap</a><br></li>
         <li><b><a href="/games/color-tunnel.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Color Tunnel</a><br></li>
         <li><b><a href="/games/contra-3.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Contra 3</a><br></li>
@@ -53,6 +55,7 @@ textarea:focus, input:focus {
         <li><b><a href="/games/fire-boy-and-water-girl.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Fire Boy and Water Girl</a><br></li> 
         <li><b><a href="/games/geometry-dash.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Geometry Dash</a><br></li>
         <li><b><a href="/games/getaway-shootout.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Getaway Shootout</a><br></li>
+        <li><b><a href="/games/gimme-the-airpod.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Gimme The Airpod</a><br></li>
         <li><b><a href="/games/google-baseball.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Google Baseball</a><br></li>
         <li><b><a href="/games/grind-craft.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Grindcraft</a><br></li>
         <li><b><a href="/games/gun-mayhem-2.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Gun Mayhem 2</a><br></li>
@@ -61,7 +64,7 @@ textarea:focus, input:focus {
         <li><b><a href="/games/idle-breakout.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Idle Breakout</a><br></li>
         <li><b><a href="/games/idle-mining-empire.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Idle Mining Empire</a><br></li>
         <li><b><a href="/games/jetpack-joyride.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Jetpack Joyride</a><br></li>
-          <li><b><a href="/games/eagler-craft.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Minecraft</a><br></li>
+        <li><b><a href="/games/eagler-craft.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Minecraft</a><br></li>
         <li><b><a href="/games/kirka-io.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Kirka.io</a><br></li>
         <li><b><a href="/games/krunker-io.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Krunker.io</a><br></li>
         <li><b><a href="/games/make-it-meme.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Make It Meme</a><br></li>
@@ -87,16 +90,23 @@ textarea:focus, input:focus {
         <li><b><a href="/games/snow-rider-3d.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Snow Rider 3D</a><br></li>
         <li><b><a href="/games/soccer-random.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Soccer Random</a><br></li>
         <li><b><a href="/games/soccer-skills.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Soccer Skills</a><br></li>
+        <li><b><a href="/games/soldier-legend.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Soldier Legend</a><br></li>
         <li><b><a href="/games/sort-the-court.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Sort The Court</a><br></li>
+        <li><b><a href="/games/stack-bump-3d.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Stack Bump 3d</a><br></li>
         <li><b><a href="/games/stick-merge.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Stick Merge</a><br></li>
+        <li><b><a href="/games/stickman-dismount.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Stickman Dismount</a><br></li>
         <li><b><a href="/games/stickman-hook.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Stickman Hook</a><br></li>
         <li><b><a href="/games/subway-surfers.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Subway Surfers</a><br></li>
         <li><b><a href="/games/super-mario-bros.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Super Mario Bros.</a><br></li>
         <li><b><a href="/games/tanuki-sunset.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Tanuki Sunset</a><br></li>
+        <li><b><a href="/games/temple-run-2.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Temple Run 2</a><br></li>
+        <li><b><a href="/games/the-heist.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">The Heist</a><br></li>
         <li><b><a href="/games/thps2.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Tony Hawk Pro Skater: 2</a><br></li>
         <li><b><a href="/games/time-shooter-3.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Time Shooter: 3</a><br></li>
+        <li><b><a href="/games/tunnelz.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Tunnelz</a><br></li>
         <li><b><a href="/games/uno.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Uno Online</a><br></li>
         <li><b><a href="/games/wheelie-cross.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Wheelie Cross</a><br></li>
+        <li><b><a href="/games/x-trial-racing.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">X-Trial Racing</a><br></li>
     </ul>
 </div>
 
