--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 </div>
 
 <div class="newsHeader">
-  <a href="https://spew45.github.io" style="text-decoration: none;"><h1 style="color: #fff; font-family: 'Poppins', sans-serif;">Update 0.1.2</h1></a>
-  <p style="font-family: Arial;">- fixes to all previously broken games<br>- added fullscreen game option, click on the gear icon in the top right when playing a game</p>
+  <a href="https://spew45.github.io/changelog.txt" style="text-decoration: none;"><h1 style="color: #fff; font-family: 'Poppins', sans-serif;">Update 0.1.3</h1></a>
+  <p style="font-family: Arial;">- added 10 games</p>
 </div>
 
 <div class="text">
