--- a/games/make-it-meme.html
+++ b/games/make-it-meme.html
@@ -39,6 +39,6 @@ unblocked games!</p>
 <embed src="/dump/text.html">
 </div>
 
-<p align="center"><iframe src="https://spew45.github.io/game-assets/drive-mad/makeitmeme" id="iframe"></iframe></p>
+<p align="center"><iframe src="https://makeitmeme.com/en/" id="iframe"></iframe></p>
 
 <script src="/js/test.js"></script>
