--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 <div class="newsHeader">
   <a href="https://spew45.github.io/changelog.txt" style="text-decoration: none;"><h1 style="color: #fff; font-family: 'Poppins', sans-serif;">Update 0.1.3</h1></a>
-  <p style="font-family: Arial;">- added 10 games</p>
+  <p style="font-family: Arial;">- click above to see updates</p>
 </div>
 
 <div class="text">
