--- a/dump/text.html
+++ b/dump/text.html
@@ -63,6 +63,7 @@ textarea:focus, input:focus {
         <li><b><a href="/games/harry-potter-chamber-of-secrets.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Harry Potter: 2 (GBA)</a><br></li>
         <li><b><a href="/games/idle-breakout.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Idle Breakout</a><br></li>
         <li><b><a href="/games/idle-mining-empire.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Idle Mining Empire</a><br></li>
+        <li><b><a href="/games/infinite-craft.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Infinite Craft</a><br></li>
         <li><b><a href="/games/jetpack-joyride.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Jetpack Joyride</a><br></li>
         <li><b><a href="/games/just-fall.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Just Fall</a><br></li>
         <li><b><a href="/games/eagler-craft.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Minecraft</a><br></li>
@@ -75,6 +76,7 @@ textarea:focus, input:focus {
         <li><b><a href="/games/moto-x3m.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Moto X3M</a><br></li>
         <li><b><a href="/games/n-gon.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">N-Gon</a><br></li>
         <li><b><a href="/games/namco-museum.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Namco Museum</a><br></li>
+        <li><b><a href="/games/neal-fun.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Neal.fun</a><br></li>
         <li><b><a href="/games/paper-io-2.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Paper.io 2</a><br></li>
         <li><b><a href="/games/pixel-shooter.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Pixel Shooter</a><br></li>
         <li><b><a href="/games/pocket-league-3d.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Pocket League 3D</a><br></li>
