--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 </div>
 
 <div class="newsHeader">
-  <a href="https://spew45.github.io/changelog.txt" style="text-decoration: none;"><h1 style="color: #fff; font-family: 'Poppins', sans-serif;">Update 0.1.3</h1></a>
-  <p style="font-family: Arial;">- click above to see updates</p>
+  <a href="https://spew45.github.io/changelog.txt" style="text-decoration: none;"><h1 style="color: #fff; font-family: 'Poppins', sans-serif;">Update 0.1.4</h1></a>
+  <p style="font-family: Arial;">-small update<br></p>
 </div>
 
 <div class="text">
