--- a/games/drift-hunters.html
+++ b/games/drift-hunters.html
@@ -38,6 +38,6 @@
 <embed src="/dump/text.html">
 </div>
 
-<p align="center"><iframe src="https://spew45.github.io/game-assets/cars-simulator/" id="iframe"></iframe></p>
+<p align="center"><iframe src="https://htmlxm.github.io/h/drift-hunters" id="iframe"></iframe></p>
 
 <script src="/js/test.js"></script>
