--- a/dump/text.html
+++ b/dump/text.html
@@ -50,6 +50,7 @@ textarea:focus, input:focus {
         <li><b><a href="/games/donkey-kong.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Donkey Kong</a><br></li>
         <li><b><a href="/games/draw-the-hill.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Draw The Hill</a><br></li>
         <li><b><a href="/games/drift-boss.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Drift Boss</a><br></li>
+        <li><b><a href="/games/drift-hunters.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Drift Hunters</a><br></li>
         <li><b><a href="/games/drive-mad.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Drive Mad</a><br></li>
         <li><b><a href="/games/eggy-car.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Eggy Car</a><br></li>
         <li><b><a href="/games/fire-boy-and-water-girl.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Fire Boy and Water Girl</a><br></li> 
