--- a/games/burrito-bison.html
+++ b/games/burrito-bison.html
@@ -38,6 +38,6 @@
 <embed src="/dump/text.html">
 </div>
 
-<p align="center"><iframe src="https://tybsi.com/games/burrito-bison-launcha-libre/index.html" id="iframe"></iframe></p>
+<p align="center"><iframe src="https://burritobisononline.github.io/file" id="iframe"></iframe></p>
 
 <script src="/js/test.js"></script>
