--- a/games/twitch-tetris.html
+++ b/games/twitch-tetris.html
@@ -39,6 +39,6 @@ unblocked games!</p>
 <embed src="/dump/text.html">
 </div>
 
-<p align="center"><iframe src="https://www.rossipotti.de/ausgabe28/tetris/index.html" id="iframe"></iframe></p>
+<p align="center"><iframe src="https://www.rossipotti.de/ausgabe28/tetris/index.html" scrolling="no" id="iframe"></iframe></p>
 
 <script src="/js/test.js"></script>
