--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <a href="/games/slope.html" style="text-decoration: none;"><img src="images/games/slope.png" height="160" width="160" vspace="10" hspace="10">
 <a href="/games/retro-bowl.html" style="text-decoration: none;"><img src="images/games/retro-bowl.png" height="160" width="160" vspace="10" hspace="10">
 <a href="/games/monkey-mart.html" style="text-decoration: none;"><img src="images/games/monkey-mart.png" height="160" width="160" vspace="10" hspace="10">
-<a href="/games/x2-block.html" style="text-decoration: none;"><img src="images/games/x2-blocks.png" height="160" width="160" vspace="10" hspace="10">
+<a href="/games/basket-random.html" style="text-decoration: none;"><img src="images/games/basket-random.png" height="160" width="160" vspace="10" hspace="10">
 <a href="/games/burrito-bison.html" style="text-decoration: none;"><img src="images/games/burrito-bison.png" height="160" width="160" vspace="10" hspace="10">
 <a href="/games/doge-miner.html" style="text-decoration: none;"><img src="images/games/doge-miner.png" height="160" width="160" vspace="10" hspace="10">
 <a href="/games/eggy-car.html" style="text-decoration: none;"><img src="images/games/eggy-car.png" height="160" width="160" vspace="10" hspace="10">
