--- a/games/retro-bowl.html
+++ b/games/retro-bowl.html
@@ -39,6 +39,6 @@ unblocked games!</p>
 <embed src="/dump/text.html">
 </div>
 
-<p align="center"><iframe src="https://spew45.github.io/game-assets/retro-bowl/" id="iframe"></iframe></p>
+<p align="center"><iframe src="https://spew45.github.io/game-assets/retro-bowl/" id="iframe" sandbox="allow-same-origin allow-scripts allow-forms"></iframe></p>
 
 <script src="/js/test.js"></script>
